# basic-emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  basic.c  configure-lin-64  configure-win-64.bat  project.4coder
assets/: bloom_blending_fragment.glsl  bloom_downsample_fragment.glsl  bloom_upsample_fragment.glsl  glyph_fragment.glsl  glyph_vertex.glsl  processing_fragment.glsl  quad_fragment.glsl  quad_vertex.glsl  vertex.glsl
libretro/: CMakeLists.txt  buffer.c  buffer.h  display.c  display.h  emu.c  emu.h  expr.c  expr.h  glyph.c  glyph.h  input.c  input.h  lexer.c  lexer.h  list.c  list.h  list_test.c  map.c  map.h  math.c  math.h  prog.c  prog.h  random.c  random.h  renderer.c  renderer.h  retro.c  retro.h  shader.c  shader.h  stack.c  stack.h  state.c  state.h  stmt.c  stmt.h  text.c  text.h  (+5 more)
libretro/arch/: thread.h  time.h
libretro/arch/linux/: linux_thread.c  linux_time.c
libretro/arch/win32/: win32_thread.c  win32_time.c
libretro/gpu/: buffer.c  buffer.h  glyph.c  glyph.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
libretro/util/: arena.c  arena.h  list.c  list.h  map.c  map.h  math.c  math.h  random.c  random.h  stack.c  stack.h  text.c  text.h  utility.c  utility.h
source/: CMakeLists.txt  basic.c  types.h
source/arch/: arch.c  arch.h  thread.h  time.h
source/arch/darwin/: arch.c  darwin_thread.c  darwin_time.c
source/arch/linux/: arch.c  linux_thread.c  linux_time.c
source/arch/win32/: win32_thread.c  win32_time.c
source/core/: core.c  core.h  display.c  display.h  emu.c  emu.h  expr.c  expr.h  input.c  input.h  lexer.c  lexer.h  prog.c  prog.h  stmt.c  stmt.h  types.h
source/gpu/: buffer.c  buffer.h  glyph.c  glyph.h  gpu.c  gpu.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
source/util/: arena.c  arena.h  file.c  file.h  list.c  list.h  map.c  map.h  math.c  math.h  random.c  random.h  stack.c  stack.h  text.c  text.h  types.h  util.c  util.h  utility.c  utility.h
tests/: CMakeLists.txt  list_test.c  map_test.c  stack_test.c
